# temsim-gpu

./: README.md  build_temsim.sh  build_temsim_cuda.sh
temsim/: CMakeLists.txt  autoslic.cpp  autoslicAnimate.py  autoslic_cuda.hpp  autosliccmd.cpp  autosliccmd_cuda.cpp  autostem.hpp  autostem_cuda.hpp  autostemcmd.cpp  cudaSlice.h  ftiff2py.py  incostem.cpp  incostemcmd.cpp  pdb2xyz.cpp  ransubs.cpp  ransubs.hpp  slicelib.cpp
temsim-cuda/: CMakeLists.txt  Makefile  atompot.cpp  autoslic.hpp  autoslicAnimate.txt  autoslic_cuda.cu  autostem.cpp  autostem_cuda.cu  autostemcmd_cuda.cpp  cudaSlice.cu  incostem.hpp  rfpix.cpp  rfpix.hpp  slicelib.hpp
temsim-hip/: README.md
temsim-sycl/: README.md
